docs/v7.1/properties/P111.md
---
layout: page
title: P111 a ajouté (a été ajouté par)
titleEn: P111 added (was added by) - a ajouté (a été ajouté par)
permalink: /v7.1/proprietes/P111
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E79 Part Addition</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code></p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>many to many, necessary (1,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs, nécessaire (1,n:0,n)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property identifies the instance of E18 Physical Thing that is added during an instance of E79 Part Addition activity</p>
</td>
<td>
<p>Cette propriété identifie l'instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code> qui est ajoutée lors d'une activité d'ajout d'élément (<code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code>).</p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>the insertion of the final nail (E79) <em>added</em> the last nail in George VI’s coffin (E18) (https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>L'insertion du dernier clou (<code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code>) a ajouté (<code class="language-plaintext highlighter-rouge">P111_a_ajouté</code>) le dernier clou dans le cercueil de George VI (<code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code>) (https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the -en état)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P111(x,y) ⇒ E79(x)</p>
<p>P111(x,y) ⇒ E18(y)</p>
<p>P111(x,y) ⇒ P16(x,y)</p>
</td>
<td>
<p>P111(x,y) ⇒ E79(x)</p>
<p>P111(x,y) ⇒ E18(y)</p>
<p>P111(x,y) ⇒ P16(x,y)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
