docs/v7.1.2/properties/P111.md
---
layout: page
title: P111 a ajouté (a été ajouté par)
titleEn: P111 added (was added by) - a ajouté (a été ajouté par)
permalink: /v7.1.2/proprietes/P111
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E79 Part Addition</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code></p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E18 Physical Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
<p>E7 Activity. P16 used specific object (was used for): E70 Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code>. <code class="language-plaintext highlighter-rouge">P16_a_mobilisé_l’objet_spécifique (a_été_mobilisé_pour)</code> : <code class="language-plaintext highlighter-rouge">E70_Chose</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many, necessary (1,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs, nécessaire (1,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property identifies the instance of E18 Physical Thing that is added during an instance of E79 Part Addition activity.</p>
</td>
<td>
<p>Cette propriété identifie l'instance de <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code> qui est ajoutée lors d'une activité d'ajout d'élément (<code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code>).</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>The insertion of the final nail (E79) added the last nail in George VI’s coffin (E22). (<a href="https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state"><span class="underline">https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state</span></a>) </p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>L'insertion du dernier clou (<code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code>) a ajouté (<code class="language-plaintext highlighter-rouge">P111_a_ajouté</code>) le dernier clou dans le cercueil de George VI (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>) (<a href="https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state"><span class="underline">https://www.rct.uk/collection/2000811/the-coffin-of-king-george-vi-during-the-lying-in-state</span></a>) </p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P111(x,y) ⇒ E79(x)</p>
<p>P111(x,y) ⇒ E18(y)</p>
<p>P111(x,y) ⇒ P16(x,y)</p>
</td>
<td>
<p>P111(x,y) ⇒ E79(x)</p>
<p>P111(x,y) ⇒ E18(y)</p>
<p>P111(x,y) ⇒ P16(x,y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
